# openai-sydney-04-2026-hackathon-

./: .gitignore  README.md  package.json
docs/: automatic-init-threads-execplan.md  gh-pr-comments-import-execplan.md  github-review-submit-execplan.md  local-test-runs-execplan.md  pr-comments-publish-execplan.md  review-room-mvp-execplan.md  voice-pr-file-tools-execplan.md  voice-thread-page-context-execplan.md
server/: pyproject.toml
server/review_room/: __init__.py  agent.py  checkout.py  github.py  init_threads.py  main.py  models.py  prompting.py  store.py  test_runs.py  threads.py
server/tests/: test_agent.py  test_checkout.py  test_github.py  test_main.py  test_prompting.py  test_startup.py  test_store.py  test_threads.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
web/src/components/: AIWorkbench.test.tsx  AIWorkbench.tsx  ChangedFilesPane.test.tsx  ChangedFilesPane.tsx  DiffPane.test.tsx  DiffPane.tsx  MermaidBlock.test.tsx  MermaidBlock.tsx  PullRequestPanel.test.tsx  PullRequestPanel.tsx  SelectionChip.test.tsx  SelectionChip.tsx  VoiceSelectionDemo.test.tsx  VoiceSelectionDemo.tsx
web/src/lib/: diff.test.ts  diff.ts
