[project]
name = "review-room-server"
version = "0.1.0"
description = "FastAPI backend for Review Room"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["review_room"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
